[package]
name = "mollie"
version = "0.1.4"
edition = "2021"
license = "MIT"
readme = "README.md"
keywords = ["mollie", "payments", "api", "client"]
description = "Mollie API client for Rust"
repository = "https://github.com/brainpodnl/mollie-api-rust"
documentation = "https://docs.rs/mollie"

[dependencies]
bytes = "1.9"
chrono = { version = "0.4", default-features=false, features = ["serde"] }
futures-core = "0.3"
progenitor-client = "0.11.1"
regress = "0.10"
reqwest = { version = "0.12", default-features=false, features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
